--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "seed": "node prisma/seed/seed.js"
   },
   "dependencies": {
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.15.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.9",
-    "prisma": "^6.5.0"
+    "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
+    "prisma": "^6.15.0"
   }
 }
