--- a/front/package.json
+++ b/front/package.json
@@ -1,29 +1,10 @@
 {
-  "name": "front",
-  "version": "0.1.0",
+  "name": "finances-back-end-e-front-end",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.2",
-    "lucide-react": "^0.543.0",
-    "next": "15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-hot-toast": "^2.6.0",
-    "recharts": "^3.2.0",
-    "xlsx": "^0.18.5"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4"
+    "dev": "cd front && npm run dev",
+    "build": "cd front && npm run build",
+    "start": "cd front && npm run start",
+    "lint": "cd front && npm run lint"
   }
 }
